...
    "ice_cream" -> "Heladería"
    "hospital" -> "Hospital"
    "clinic", "doctors" -> "Clínica"
    "pharmacy" -> "Farmacia"
    "mall" -> "Centro comercial"
    "marketplace" -> "Mercado"
    "square" -> "Plaza"
    "park" -> "Parque"
    "stadium" -> "Estadio"
    "pitch", "sports_centre" -> "Cancha deportiva"
    "school" -> "Centro educativo"
    "college" -> "Instituto"
    "university" -> "Universidad"
...
