...
@Composable
private fun HeaderSearchBar(
    value: String,
    onValueChange: (String) -> Unit,
    onFocusChange: (Boolean) -> Unit = {},
    modifier: Modifier = Modifier,
    placeholderText: String = "¿A dónde quieres ir?",
    showClearButton: Boolean = false,
    onClearClick: () -> Unit = {},
    shape: RoundedCornerShape = RoundedCornerShape(50),
    elevation: Dp = 6.dp
) {
    Box(
...
